deploy: f9060c638bdbc2031815194e32a6e5a00424dad9

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -31,6 +31,7 @@
 <a href="world__state_8hpp_source.html"/>
 <a href="arm_8hpp_source.html"/>
 <a href="audio__in_8hpp_source.html"/>
+<a href="audio__out_8hpp_source.html"/>
 <a href="base_8hpp_source.html"/>
 <a href="board_8hpp_source.html"/>
 <a href="button_8hpp_source.html"/>
@@ -46,6 +47,8 @@
 <a href="arm__server_8hpp_source.html"/>
 <a href="audio__in__client_8hpp_source.html"/>
 <a href="audio__in__server_8hpp_source.html"/>
+<a href="audio__out__client_8hpp_source.html"/>
+<a href="audio__out__server_8hpp_source.html"/>
 <a href="base__client_8hpp_source.html"/>
 <a href="base__server_8hpp_source.html"/>
 <a href="board__client_8hpp_source.html"/>
@@ -125,6 +128,7 @@
 <a href="exception_8hpp.html"/>
 <a href="arm_8hpp.html"/>
 <a href="audio__in_8hpp.html"/>
+<a href="audio__out_8hpp.html"/>
 <a href="base_8hpp.html"/>
 <a href="board_8hpp.html"/>
 <a href="button_8hpp.html"/>
@@ -139,6 +143,8 @@
 <a href="arm__server_8hpp.html"/>
 <a href="audio__in__client_8hpp.html"/>
 <a href="audio__in__server_8hpp.html"/>
+<a href="audio__out__client_8hpp.html"/>
+<a href="audio__out__server_8hpp.html"/>
 <a href="base__client_8hpp.html"/>
 <a href="base__server_8hpp.html"/>
 <a href="board__client_8hpp.html"/>
@@ -188,6 +194,7 @@
 <a href="group__ProtoValueVisit.html"/>
 <a href="group__Arm.html"/>
 <a href="group__Base.html"/>
+<a href="group__AudioOut.html"/>
 <a href="group__Button.html"/>
 <a href="group__Gantry.html"/>
 <a href="group__Gripper.html"/>
@@ -242,6 +249,8 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Arm_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01AudioIn_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01AudioIn_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01AudioOut_01_4.html"/>
+<a href="structviam_1_1sdk_1_1API_1_1traits_3_01AudioOut_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Base_01_4.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Base_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Board_01_4.html"/>
@@ -306,6 +315,8 @@
 <a href="classviam_1_1sdk_1_1AudioIn-members.html"/>
 <a href="structviam_1_1sdk_1_1AudioIn_1_1audio__chunk.html"/>
 <a href="structviam_1_1sdk_1_1AudioIn_1_1audio__chunk-members.html"/>
+<a href="classviam_1_1sdk_1_1AudioOut.html"/>
+<a href="classviam_1_1sdk_1_1AudioOut-members.html"/>
 <a href="structviam_1_1sdk_1_1axis__angles.html"/>
 <a href="structviam_1_1sdk_1_1axis__angles-members.html"/>
 <a href="classviam_1_1sdk_1_1Base.html"/>
@@ -559,6 +570,10 @@
 <a href="classviam_1_1sdk_1_1impl_1_1AudioInClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1AudioInServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1AudioInServer-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1AudioOutClient.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1AudioOutClient-members.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1AudioOutServer.html"/>
+<a href="classviam_1_1sdk_1_1impl_1_1AudioOutServer-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1BaseClient.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1BaseClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1BaseServer.html"/>
