--- a/classviam_1_1sdk_1_1ResourceServer.html
+++ b/classviam_1_1sdk_1_1ResourceServer.html
@@ -94,26 +94,27 @@ $(function() {
 <area href="classSummationServer.html" alt="SummationServer" shape="rect" coords="254,112,498,136"/>
 <area href="classviam_1_1sdk_1_1impl_1_1ArmServer.html" title="gRPC server implementation of an Arm component." alt="viam::sdk::impl::ArmServer" shape="rect" coords="254,168,498,192"/>
 <area href="classviam_1_1sdk_1_1impl_1_1AudioInServer.html" title="gRPC server implementation of an AudioIn component." alt="viam::sdk::impl::AudioInServer" shape="rect" coords="254,224,498,248"/>
-<area href="classviam_1_1sdk_1_1impl_1_1BaseServer.html" title="gRPC server implementation of a Base component." alt="viam::sdk::impl::BaseServer" shape="rect" coords="254,280,498,304"/>
-<area href="classviam_1_1sdk_1_1impl_1_1BoardServer.html" title="gRPC server implementation of a Board component." alt="viam::sdk::impl::BoardServer" shape="rect" coords="254,336,498,360"/>
-<area href="classviam_1_1sdk_1_1impl_1_1ButtonServer.html" alt="viam::sdk::impl::ButtonServer" shape="rect" coords="254,392,498,416"/>
-<area href="classviam_1_1sdk_1_1impl_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::impl::CameraServer" shape="rect" coords="254,448,498,472"/>
-<area href="classviam_1_1sdk_1_1impl_1_1DiscoveryServer.html" title="gRPC server implementation of a Discovery service." alt="viam::sdk::impl::DiscoveryServer" shape="rect" coords="254,504,498,528"/>
-<area href="classviam_1_1sdk_1_1impl_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::impl::EncoderServer" shape="rect" coords="254,560,498,584"/>
-<area href="classviam_1_1sdk_1_1impl_1_1GantryServer.html" title="gRPC server implementation of a Gantry component." alt="viam::sdk::impl::GantryServer" shape="rect" coords="254,616,498,640"/>
-<area href="classviam_1_1sdk_1_1impl_1_1GenericComponentServer.html" title="gRPC server implementation of a GenericComponent." alt="viam::sdk::impl::GenericComponentServer" shape="rect" coords="254,672,498,696"/>
-<area href="classviam_1_1sdk_1_1impl_1_1GenericServiceServer.html" title="gRPC server implementation of a GenericService." alt="viam::sdk::impl::GenericServiceServer" shape="rect" coords="254,728,498,752"/>
-<area href="classviam_1_1sdk_1_1impl_1_1GripperServer.html" alt="viam::sdk::impl::GripperServer" shape="rect" coords="254,784,498,808"/>
-<area href="classviam_1_1sdk_1_1impl_1_1MLModelServiceServer.html" alt="viam::sdk::impl::MLModelServiceServer" shape="rect" coords="254,840,498,864"/>
-<area href="classviam_1_1sdk_1_1impl_1_1MotionServer.html" title="gRPC server implementation of a Motion service." alt="viam::sdk::impl::MotionServer" shape="rect" coords="254,896,498,920"/>
-<area href="classviam_1_1sdk_1_1impl_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::impl::MotorServer" shape="rect" coords="254,952,498,976"/>
-<area href="classviam_1_1sdk_1_1impl_1_1MovementSensorServer.html" title="gRPC server implementation of a MovementSensor component." alt="viam::sdk::impl::MovementSensorServer" shape="rect" coords="254,1008,498,1032"/>
-<area href="classviam_1_1sdk_1_1impl_1_1NavigationServer.html" title="gRPC server implementation of a Navigation service." alt="viam::sdk::impl::NavigationServer" shape="rect" coords="254,1064,498,1088"/>
-<area href="classviam_1_1sdk_1_1impl_1_1PoseTrackerServer.html" title="gRPC server implementation of a PoseTracker component." alt="viam::sdk::impl::PoseTrackerServer" shape="rect" coords="254,1120,498,1144"/>
-<area href="classviam_1_1sdk_1_1impl_1_1PowerSensorServer.html" title="gRPC server implementation of a PowerSensor component." alt="viam::sdk::impl::PowerSensorServer" shape="rect" coords="254,1176,498,1200"/>
-<area href="classviam_1_1sdk_1_1impl_1_1SensorServer.html" title="gRPC server implementation of a Sensor component." alt="viam::sdk::impl::SensorServer" shape="rect" coords="254,1232,498,1256"/>
-<area href="classviam_1_1sdk_1_1impl_1_1ServoServer.html" title="gRPC server implementation of a Servo component." alt="viam::sdk::impl::ServoServer" shape="rect" coords="254,1288,498,1312"/>
-<area href="classviam_1_1sdk_1_1impl_1_1SwitchServer.html" title="gRPC server implementation of a Switch component." alt="viam::sdk::impl::SwitchServer" shape="rect" coords="254,1344,498,1368"/>
+<area href="classviam_1_1sdk_1_1impl_1_1AudioOutServer.html" title="gRPC server implementation of an AudioOut component." alt="viam::sdk::impl::AudioOutServer" shape="rect" coords="254,280,498,304"/>
+<area href="classviam_1_1sdk_1_1impl_1_1BaseServer.html" title="gRPC server implementation of a Base component." alt="viam::sdk::impl::BaseServer" shape="rect" coords="254,336,498,360"/>
+<area href="classviam_1_1sdk_1_1impl_1_1BoardServer.html" title="gRPC server implementation of a Board component." alt="viam::sdk::impl::BoardServer" shape="rect" coords="254,392,498,416"/>
+<area href="classviam_1_1sdk_1_1impl_1_1ButtonServer.html" alt="viam::sdk::impl::ButtonServer" shape="rect" coords="254,448,498,472"/>
+<area href="classviam_1_1sdk_1_1impl_1_1CameraServer.html" title="gRPC server implementation of a Camera component." alt="viam::sdk::impl::CameraServer" shape="rect" coords="254,504,498,528"/>
+<area href="classviam_1_1sdk_1_1impl_1_1DiscoveryServer.html" title="gRPC server implementation of a Discovery service." alt="viam::sdk::impl::DiscoveryServer" shape="rect" coords="254,560,498,584"/>
+<area href="classviam_1_1sdk_1_1impl_1_1EncoderServer.html" title="gRPC server implementation of a Encoder component." alt="viam::sdk::impl::EncoderServer" shape="rect" coords="254,616,498,640"/>
+<area href="classviam_1_1sdk_1_1impl_1_1GantryServer.html" title="gRPC server implementation of a Gantry component." alt="viam::sdk::impl::GantryServer" shape="rect" coords="254,672,498,696"/>
+<area href="classviam_1_1sdk_1_1impl_1_1GenericComponentServer.html" title="gRPC server implementation of a GenericComponent." alt="viam::sdk::impl::GenericComponentServer" shape="rect" coords="254,728,498,752"/>
+<area href="classviam_1_1sdk_1_1impl_1_1GenericServiceServer.html" title="gRPC server implementation of a GenericService." alt="viam::sdk::impl::GenericServiceServer" shape="rect" coords="254,784,498,808"/>
+<area href="classviam_1_1sdk_1_1impl_1_1GripperServer.html" alt="viam::sdk::impl::GripperServer" shape="rect" coords="254,840,498,864"/>
+<area href="classviam_1_1sdk_1_1impl_1_1MLModelServiceServer.html" alt="viam::sdk::impl::MLModelServiceServer" shape="rect" coords="254,896,498,920"/>
+<area href="classviam_1_1sdk_1_1impl_1_1MotionServer.html" title="gRPC server implementation of a Motion service." alt="viam::sdk::impl::MotionServer" shape="rect" coords="254,952,498,976"/>
+<area href="classviam_1_1sdk_1_1impl_1_1MotorServer.html" title="gRPC server implementation of a Motor component." alt="viam::sdk::impl::MotorServer" shape="rect" coords="254,1008,498,1032"/>
+<area href="classviam_1_1sdk_1_1impl_1_1MovementSensorServer.html" title="gRPC server implementation of a MovementSensor component." alt="viam::sdk::impl::MovementSensorServer" shape="rect" coords="254,1064,498,1088"/>
+<area href="classviam_1_1sdk_1_1impl_1_1NavigationServer.html" title="gRPC server implementation of a Navigation service." alt="viam::sdk::impl::NavigationServer" shape="rect" coords="254,1120,498,1144"/>
+<area href="classviam_1_1sdk_1_1impl_1_1PoseTrackerServer.html" title="gRPC server implementation of a PoseTracker component." alt="viam::sdk::impl::PoseTrackerServer" shape="rect" coords="254,1176,498,1200"/>
+<area href="classviam_1_1sdk_1_1impl_1_1PowerSensorServer.html" title="gRPC server implementation of a PowerSensor component." alt="viam::sdk::impl::PowerSensorServer" shape="rect" coords="254,1232,498,1256"/>
+<area href="classviam_1_1sdk_1_1impl_1_1SensorServer.html" title="gRPC server implementation of a Sensor component." alt="viam::sdk::impl::SensorServer" shape="rect" coords="254,1288,498,1312"/>
+<area href="classviam_1_1sdk_1_1impl_1_1ServoServer.html" title="gRPC server implementation of a Servo component." alt="viam::sdk::impl::ServoServer" shape="rect" coords="254,1344,498,1368"/>
+<area href="classviam_1_1sdk_1_1impl_1_1SwitchServer.html" title="gRPC server implementation of a Switch component." alt="viam::sdk::impl::SwitchServer" shape="rect" coords="254,1400,498,1424"/>
   </map>
 </div></div>
 <table class="memberdecls">
