deploy: 9427ed1b659b71cecae4855fad4cb77b89160f1c

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -17,6 +17,7 @@
 <a href="client__helper_8hpp_source.html"/>
 <a href="exception_8hpp_source.html"/>
 <a href="linear__algebra_8hpp_source.html"/>
+<a href="mesh_8hpp_source.html"/>
 <a href="pose_8hpp_source.html"/>
 <a href="instance_8hpp_source.html"/>
 <a href="private_2instance_8hpp_source.html"/>
@@ -407,6 +408,8 @@
 <a href="classviam_1_1sdk_1_1LogManager-members.html"/>
 <a href="structviam_1_1sdk_1_1LogManager_1_1Filter.html"/>
 <a href="structviam_1_1sdk_1_1LogManager_1_1Filter-members.html"/>
+<a href="structviam_1_1sdk_1_1mesh.html"/>
+<a href="structviam_1_1sdk_1_1mesh-members.html"/>
 <a href="classviam_1_1sdk_1_1MLModelService.html"/>
 <a href="classviam_1_1sdk_1_1MLModelService-members.html"/>
 <a href="structviam_1_1sdk_1_1MLModelService_1_1metadata.html"/>
@@ -677,6 +680,8 @@
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GeoPoint_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GetGeometriesResponse_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GetGeometriesResponse_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1Mesh_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1Mesh_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1Pose_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1Pose_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1PoseInFrame_01_4.html"/>
@@ -726,6 +731,8 @@
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01HandlerMap___01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01LinkConfig_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01LinkConfig_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01mesh_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01mesh_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01Name_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01Name_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01Orientation_01_4.html"/>
