--- a/arm_8hpp.html
+++ b/arm_8hpp.html
@@ -86,6 +86,7 @@ $(function() {
 <div class="textblock"><code>#include &lt;string&gt;</code><br />
 <code>#include &lt;boost/optional/optional.hpp&gt;</code><br />
 <code>#include &lt;boost/variant/variant.hpp&gt;</code><br />
+<code>#include &lt;viam/sdk/common/mesh.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/common/pose.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/resource/stoppable.hpp&gt;</code><br />
 <code>#include &lt;viam/sdk/spatialmath/geometry.hpp&gt;</code><br />
