deploy: d7781f3ae234f88be39a0c6e2aaca546ddc42065

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -100,6 +100,8 @@
 <a href="client_8hpp_source.html"/>
 <a href="dial_8hpp_source.html"/>
 <a href="message__sizes_8hpp_source.html"/>
+<a href="grpc__context__observer_8hpp_source.html"/>
+<a href="private_2grpc__context__observer_8hpp_source.html"/>
 <a href="viam__grpc__channel_8hpp_source.html"/>
 <a href="server_8hpp_source.html"/>
 <a href="discovery_8hpp_source.html"/>
@@ -182,6 +184,7 @@
 <a href="registry_8hpp.html"/>
 <a href="resource__manager_8hpp.html"/>
 <a href="client_8hpp.html"/>
+<a href="grpc__context__observer_8hpp.html"/>
 <a href="server_8hpp.html"/>
 <a href="discovery_8hpp.html"/>
 <a href="components_2generic_8hpp.html"/>
@@ -392,6 +395,10 @@
 <a href="classviam_1_1sdk_1_1Gripper-members.html"/>
 <a href="structviam_1_1sdk_1_1Gripper_1_1holding__status.html"/>
 <a href="structviam_1_1sdk_1_1Gripper_1_1holding__status-members.html"/>
+<a href="classviam_1_1sdk_1_1GrpcContextObserver.html"/>
+<a href="classviam_1_1sdk_1_1GrpcContextObserver-members.html"/>
+<a href="classviam_1_1sdk_1_1GrpcContextObserver_1_1Enable.html"/>
+<a href="classviam_1_1sdk_1_1GrpcContextObserver_1_1Enable-members.html"/>
 <a href="classviam_1_1sdk_1_1GRPCException.html"/>
 <a href="classviam_1_1sdk_1_1GRPCException-members.html"/>
 <a href="classviam_1_1sdk_1_1HandlerMap__.html"/>
