--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -13,6 +13,8 @@
 <a href="base_2impl_8hpp_source.html"/>
 <a href="gizmo_2impl_8hpp_source.html"/>
 <a href="summation_2impl_8hpp_source.html"/>
+<a href="data__client_8hpp_source.html"/>
+<a href="viam__client_8hpp_source.html"/>
 <a href="audio_8hpp_source.html"/>
 <a href="client__helper_8hpp_source.html"/>
 <a href="exception_8hpp_source.html"/>
@@ -365,6 +367,10 @@
 <a href="structviam_1_1sdk_1_1coordinates-members.html"/>
 <a href="classviam_1_1sdk_1_1Credentials.html"/>
 <a href="classviam_1_1sdk_1_1Credentials-members.html"/>
+<a href="classviam_1_1sdk_1_1DataClient.html"/>
+<a href="classviam_1_1sdk_1_1DataClient-members.html"/>
+<a href="structviam_1_1sdk_1_1DataClient_1_1tabular__data__by__mql__opts.html"/>
+<a href="structviam_1_1sdk_1_1DataClient_1_1tabular__data__by__mql__opts-members.html"/>
 <a href="classviam_1_1sdk_1_1Discovery.html"/>
 <a href="classviam_1_1sdk_1_1Discovery-members.html"/>
 <a href="classviam_1_1sdk_1_1Encoder.html"/>
@@ -565,6 +571,8 @@
 <a href="classviam_1_1sdk_1_1ViamChannel-members.html"/>
 <a href="classviam_1_1sdk_1_1ViamChannel_1_1Options.html"/>
 <a href="classviam_1_1sdk_1_1ViamChannel_1_1Options-members.html"/>
+<a href="classviam_1_1sdk_1_1ViamClient.html"/>
+<a href="classviam_1_1sdk_1_1ViamClient-members.html"/>
 <a href="classviam_1_1sdk_1_1WorldState.html"/>
 <a href="classviam_1_1sdk_1_1WorldState-members.html"/>
 <a href="structviam_1_1sdk_1_1WorldState_1_1geometries__in__frame.html"/>
@@ -790,6 +798,7 @@
 <a href="structviam_1_1sdk_1_1proto__value__details_1_1kind_3_01std_1_1string_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__value__details_1_1move__may__throw.html"/>
 <a href="structviam_1_1sdk_1_1proto__value__details_1_1move__may__throw-members.html"/>
+<a href="dir_ece3cf1a7ae09d48bbbce59519e18c92.html"/>
 <a href="dir_fa9e00224e012ad37fadb7d428fff78c.html"/>
 <a href="dir_956d74ec07821189a65eed5fb7814528.html"/>
 <a href="dir_5aad60fddaff92a7b476717c1263bb08.html"/>
@@ -838,6 +847,7 @@
 <a href="functions_n.html"/>
 <a href="functions_o.html"/>
 <a href="functions_p.html"/>
+<a href="functions_q.html"/>
 <a href="functions_r.html"/>
 <a href="functions_s.html"/>
 <a href="functions_t.html"/>
@@ -864,6 +874,7 @@
 <a href="functions_func_t.html"/>
 <a href="functions_func_w.html"/>
 <a href="functions_func_~.html"/>
+<a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
