deploy: 9366cd171029078d86cd605c993556c510b69ab6

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -18,6 +18,7 @@
 <a href="audio_8hpp_source.html"/>
 <a href="client__helper_8hpp_source.html"/>
 <a href="exception_8hpp_source.html"/>
+<a href="kinematics_8hpp_source.html"/>
 <a href="linear__algebra_8hpp_source.html"/>
 <a href="mesh_8hpp_source.html"/>
 <a href="pose_8hpp_source.html"/>
@@ -305,12 +306,6 @@
 <a href="structviam_1_1sdk_1_1API_1_1traits_3_01Switch_01_4-members.html"/>
 <a href="classviam_1_1sdk_1_1Arm.html"/>
 <a href="classviam_1_1sdk_1_1Arm-members.html"/>
-<a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataSVA.html"/>
-<a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataSVA-members.html"/>
-<a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataUnspecified.html"/>
-<a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataUnspecified-members.html"/>
-<a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataURDF.html"/>
-<a href="structviam_1_1sdk_1_1Arm_1_1KinematicsDataURDF-members.html"/>
 <a href="structviam_1_1sdk_1_1Arm_1_1MoveOptions.html"/>
 <a href="structviam_1_1sdk_1_1Arm_1_1MoveOptions-members.html"/>
 <a href="structviam_1_1sdk_1_1audio__info.html"/>
@@ -379,6 +374,8 @@
 <a href="structviam_1_1sdk_1_1Encoder_1_1position-members.html"/>
 <a href="structviam_1_1sdk_1_1Encoder_1_1properties.html"/>
 <a href="structviam_1_1sdk_1_1Encoder_1_1properties-members.html"/>
+<a href="structviam_1_1sdk_1_1EqCompare.html"/>
+<a href="structviam_1_1sdk_1_1EqCompare-members.html"/>
 <a href="structviam_1_1sdk_1_1euler__angles.html"/>
 <a href="structviam_1_1sdk_1_1euler__angles-members.html"/>
 <a href="classviam_1_1sdk_1_1Exception.html"/>
@@ -413,6 +410,12 @@
 <a href="classviam_1_1sdk_1_1Instance-members.html"/>
 <a href="structviam_1_1sdk_1_1Instance_1_1Impl.html"/>
 <a href="structviam_1_1sdk_1_1Instance_1_1Impl-members.html"/>
+<a href="structviam_1_1sdk_1_1KinematicsDataSVA.html"/>
+<a href="structviam_1_1sdk_1_1KinematicsDataSVA-members.html"/>
+<a href="structviam_1_1sdk_1_1KinematicsDataUnspecified.html"/>
+<a href="structviam_1_1sdk_1_1KinematicsDataUnspecified-members.html"/>
+<a href="structviam_1_1sdk_1_1KinematicsDataURDF.html"/>
+<a href="structviam_1_1sdk_1_1KinematicsDataURDF-members.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig.html"/>
 <a href="classviam_1_1sdk_1_1LinkConfig-members.html"/>
 <a href="classviam_1_1sdk_1_1LogManager.html"/>
@@ -515,6 +518,8 @@
 <a href="classviam_1_1sdk_1_1ProtoValue-members.html"/>
 <a href="structviam_1_1sdk_1_1quaternion.html"/>
 <a href="structviam_1_1sdk_1_1quaternion-members.html"/>
+<a href="structviam_1_1sdk_1_1raw__bytes.html"/>
+<a href="structviam_1_1sdk_1_1raw__bytes-members.html"/>
 <a href="classviam_1_1sdk_1_1Reconfigurable.html"/>
 <a href="classviam_1_1sdk_1_1Reconfigurable-members.html"/>
 <a href="classviam_1_1sdk_1_1Registry.html"/>
@@ -695,6 +700,8 @@
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GeoPoint_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GetGeometriesResponse_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GetGeometriesResponse_01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GetKinematicsResponse_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1GetKinematicsResponse_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1Mesh_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1Mesh_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01common_1_1v1_1_1Pose_01_4.html"/>
@@ -744,6 +751,8 @@
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01GeometryConfig_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01HandlerMap___01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01HandlerMap___01_4-members.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01KinematicsData_01_4.html"/>
+<a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01KinematicsData_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01LinkConfig_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01LinkConfig_01_4-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1to__proto__impl_3_01mesh_01_4.html"/>
@@ -890,7 +899,6 @@
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
 <a href="functions_vars.html"/>
-<a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
 <a href="functions_type.html"/>
