--- a/gantry_8hpp.html
+++ b/gantry_8hpp.html
@@ -83,7 +83,8 @@ $(function() {
 
 <p>Defines a <code>Gantry</code> component.  
 <a href="#details">More...</a></p>
-<div class="textblock"><code>#include &lt;viam/sdk/resource/stoppable.hpp&gt;</code><br />
+<div class="textblock"><code>#include &lt;viam/sdk/common/kinematics.hpp&gt;</code><br />
+<code>#include &lt;viam/sdk/resource/stoppable.hpp&gt;</code><br />
 </div>
 <p><a href="gantry_8hpp_source.html">Go to the source code of this file.</a></p>
 <table class="memberdecls">
