deploy: 7e1f36a3e2ce276dc6d58fda7d0a58b3f48d9bbf

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -88,8 +88,10 @@
 <a href="switch_8hpp_source.html"/>
 <a href="logging_8hpp_source.html"/>
 <a href="log__backend_8hpp_source.html"/>
+<a href="data__consumer_8hpp_source.html"/>
 <a href="handler__map_8hpp_source.html"/>
 <a href="module_8hpp_source.html"/>
+<a href="data__consumer__query_8hpp_source.html"/>
 <a href="signal__manager_8hpp_source.html"/>
 <a href="frame_8hpp_source.html"/>
 <a href="registry_8hpp_source.html"/>
@@ -184,6 +186,7 @@
 <a href="servo_8hpp.html"/>
 <a href="switch_8hpp.html"/>
 <a href="logging_8hpp.html"/>
+<a href="data__consumer_8hpp.html"/>
 <a href="registry_8hpp.html"/>
 <a href="resource__manager_8hpp.html"/>
 <a href="client_8hpp.html"/>
@@ -366,6 +369,10 @@
 <a href="classviam_1_1sdk_1_1DataClient-members.html"/>
 <a href="structviam_1_1sdk_1_1DataClient_1_1tabular__data__by__mql__opts.html"/>
 <a href="structviam_1_1sdk_1_1DataClient_1_1tabular__data__by__mql__opts-members.html"/>
+<a href="classviam_1_1sdk_1_1DataConsumer.html"/>
+<a href="classviam_1_1sdk_1_1DataConsumer-members.html"/>
+<a href="structviam_1_1sdk_1_1DataConsumer_1_1query__options.html"/>
+<a href="structviam_1_1sdk_1_1DataConsumer_1_1query__options-members.html"/>
 <a href="classviam_1_1sdk_1_1Discovery.html"/>
 <a href="classviam_1_1sdk_1_1Discovery-members.html"/>
 <a href="classviam_1_1sdk_1_1Encoder.html"/>
@@ -821,6 +828,7 @@
 <a href="dir_162f7bad97373024548f5cd1bbd76748.html"/>
 <a href="dir_f844bc137c2bbb435ff038bb4a5d57e9.html"/>
 <a href="dir_f8d6e2be1b3f38a25acfdc095ec973ac.html"/>
+<a href="dir_11c269dc599e0e6135b1ad39084a3468.html"/>
 <a href="dir_f831eb8368c1d418ad5a18cbc638d687.html"/>
 <a href="dir_6c4f430257c3bc083528a175bb5c9b02.html"/>
 <a href="dir_23f34255b825d69725235b8a32db7d62.html"/>
@@ -878,6 +886,7 @@
 <a href="functions_func_n.html"/>
 <a href="functions_func_o.html"/>
 <a href="functions_func_p.html"/>
+<a href="functions_func_q.html"/>
 <a href="functions_func_r.html"/>
 <a href="functions_func_s.html"/>
 <a href="functions_func_t.html"/>
