--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -686,6 +686,8 @@
 <a href="classviam_1_1sdk_1_1impl_1_1SwitchClient-members.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1SwitchServer.html"/>
 <a href="classviam_1_1sdk_1_1impl_1_1SwitchServer-members.html"/>
+<a href="structviam_1_1sdk_1_1log__detail_1_1logger__access.html"/>
+<a href="structviam_1_1sdk_1_1log__detail_1_1logger__access-members.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01app_1_1v1_1_1ComponentConfig_01_4.html"/>
 <a href="structviam_1_1sdk_1_1proto__convert__details_1_1from__proto__impl_3_01app_1_1v1_1_1ComponentConfig_01_4-members.html"/>
